# llm4matedu

./: .gitignore  README.md  main.py  output.md  pyproject.toml  test.py
data/markdowns/ch3.2/auto/: ch3.2.md
llms/: base_llm.py  llm_api.py  local_llm.py
qa_generation/: qa_from_documents.py  qa_generator.py
utils/: cal_time.py  document_processor.py  log_it.py  pdf2md.py
